crates/ir/tests/snapshots/lower_test__ownership__shared_compose.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__shared_compose

fn assert_eq_show(v0: Dict, v1: Dict, v2: r7, v3: r7) -> r7 =
  v2
