crates/ir/tests/snapshots/lower_test__ownership__struct_update_replaces_own.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__struct_update_replaces_own

struct Buf { name: String, data: ~String }
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[y8]): List[y8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]

fn test(v0: ~Buf, v1: ~String) -> String =
  let_join v6(v2: ~Buf) =
    let v5: String = project v0.0
    v5
  in
  let v3: String = project v0.0
  let v4: ~Buf = construct Buf(v3, v1)
  jump v6(v4)
